# chess-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  LICENSE  Makefile  README.md  demo.tape  play.py  pyproject.toml  pyrightconfig.json
chess_tui/: __init__.py  agent_api.py  app.py  board_view.py  book.py  engine.py  game.py  pieces.py  puzzles.py  rl_hooks.py  screens.py  tui.tcss
data/: puzzles_sample.csv
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: api_qa.py  perf.py  playtest.py  qa.py
